# StudySphere-AI-Intelligent-Engineering-Study-Assistant

./: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  config.py  main.py
app/ai/: __init__.py  rag.py
app/api/: __init__.py
app/auth/: __init__.py  jwt_handler.py  password.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  chat.py  document.py  flashcard.py  quiz.py  user.py
app/services/: ai_service.py  document_processor.py  vector_db.py
app/utils/: __init__.py
migrations/: env.py
tests/: conftest.py
